--- a/graphql/package.json
+++ b/graphql/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.9.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "mongoose": "^6.4.2",
