Implement loggedIn plugin

--- a/graphql/.env.example
+++ b/graphql/.env.example
@@ -1,4 +1,4 @@
-VERIFY_TOKEN_URL=http://localhost:3004/v1/users/verify
+SECRET=ewhqfbhewuyor32515rewqt
 PORT=8080
 MONGO_URL=mongodb://mongoadmin:secret@localhost:27017/?authSource=admin
 APP_ENV=dev
