--- a/graphql/package.json
+++ b/graphql/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.16",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.9.0",
